--- a/skyQuest/Base.lproj/Main.storyboard
+++ b/skyQuest/Base.lproj/Main.storyboard
@@ -28,8 +28,7 @@
                                     <segue destination="iKu-XK-sFk" kind="show" id="lYi-HF-eIs"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6YY-QD-sIo">
-                                <frame key="frameInset" minX="145" minY="506" width="84" height="71"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6YY-QD-sIo">
                                 <state key="normal" backgroundImage="hq">
                                     <color key="titleColor" red="0.9137254901960784" green="0.074509803921568626" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -39,9 +38,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-cascos-1" translatesAutoresizingMaskIntoConstraints="NO" id="aCU-6d-57P"/>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HeadQuarters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ds-04-Vto">
-                                <frame key="frameInset" minX="132" minY="567" width="108" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HeadQuarters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ds-04-Vto">
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.62732725300000003" green="0.053734461339999998" blue="0.094884667470000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -49,14 +46,16 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="aCU-6d-57P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="42" id="0Sc-Ce-gIE"/>
+                            <constraint firstItem="1Ds-04-Vto" firstAttribute="top" secondItem="7g9-nV-Mwd" secondAttribute="bottom" constant="74" id="3LW-Ah-6df"/>
+                            <constraint firstItem="1Ds-04-Vto" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="132" id="9Ce-TC-5i1"/>
                             <constraint firstItem="7g9-nV-Mwd" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="101.5" id="A3J-7M-dvh"/>
-                            <constraint firstItem="aCU-6d-57P" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="42" id="AJn-2h-NMa"/>
-                            <constraint firstItem="aCU-6d-57P" firstAttribute="centerX" secondItem="7g9-nV-Mwd" secondAttribute="centerX" id="EdZ-Bk-8XW"/>
+                            <constraint firstItem="7g9-nV-Mwd" firstAttribute="top" secondItem="aCU-6d-57P" secondAttribute="bottom" constant="46" id="Heu-s7-tT3"/>
                             <constraint firstItem="7g9-nV-Mwd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LON-HY-YNz"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="6YY-QD-sIo" secondAttribute="bottom" constant="105" id="RSa-32-2ne"/>
-                            <constraint firstItem="aCU-6d-57P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="48" id="gTi-m1-KEw"/>
-                            <constraint firstItem="7g9-nV-Mwd" firstAttribute="top" secondItem="aCU-6d-57P" secondAttribute="bottom" constant="77" id="sM9-5k-Bp4"/>
-                            <constraint firstItem="7g9-nV-Mwd" firstAttribute="centerX" secondItem="6YY-QD-sIo" secondAttribute="centerX" id="wMZ-lr-7zh"/>
+                            <constraint firstItem="6YY-QD-sIo" firstAttribute="centerX" secondItem="7g9-nV-Mwd" secondAttribute="centerX" id="d0I-m2-ySQ"/>
+                            <constraint firstItem="aCU-6d-57P" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="48" id="gF8-8a-4dD"/>
+                            <constraint firstItem="aCU-6d-57P" firstAttribute="centerX" secondItem="7g9-nV-Mwd" secondAttribute="centerX" id="haZ-OB-mb5"/>
+                            <constraint firstItem="6YY-QD-sIo" firstAttribute="top" secondItem="7g9-nV-Mwd" secondAttribute="bottom" constant="13" id="nlK-ld-38f"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -187,9 +186,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvd-Tn-ztS">
-                                <frame key="frameInset" minX="93" minY="126" width="205" height="197"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvd-Tn-ztS">
                                 <state key="normal" image="worker-female-large">
                                     <color key="titleColor" red="0.62732725300000003" green="0.053734461339999998" blue="0.094884667470000003" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -198,9 +195,10 @@
                                     <segue destination="ZD6-KF-Ku9" kind="show" identifier="balloonA" id="z35-st-rV0"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUj-Ak-acW">
-                                <frame key="frameInset" minX="93" minY="350" width="181" height="190"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUj-Ak-acW">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="190" id="pXD-Qr-G4y"/>
+                                </constraints>
                                 <state key="normal" image="worker-male-large">
                                     <color key="titleColor" red="0.62732725302051284" green="0.053734461335587166" blue="0.09488466746523519" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -209,9 +207,8 @@
                                     <segue destination="ZD6-KF-Ku9" kind="show" identifier="BalloonB" id="yTg-bC-LrN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ranger Button A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDk-Nk-0UT">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Ranger Button A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BDk-Nk-0UT">
                                 <frame key="frameInset" minX="122" minY="305" width="132" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.62732725300000003" green="0.053734461339999998" blue="0.094884667470000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -225,6 +222,16 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="WUj-Ak-acW" secondAttribute="trailing" constant="85" id="9hy-W7-gVk"/>
+                            <constraint firstItem="yvd-Tn-ztS" firstAttribute="top" secondItem="nfd-mV-0Og" secondAttribute="bottom" constant="62" id="DFJ-Vr-RkW"/>
+                            <constraint firstItem="WUj-Ak-acW" firstAttribute="top" secondItem="BDk-Nk-0UT" secondAttribute="bottom" constant="24" id="Dw4-qP-n8n"/>
+                            <constraint firstItem="2Ij-jn-cRh" firstAttribute="top" secondItem="WUj-Ak-acW" secondAttribute="bottom" constant="127" id="L72-Sm-WWB"/>
+                            <constraint firstItem="yvd-Tn-ztS" firstAttribute="leading" secondItem="DZ5-ap-Yvk" secondAttribute="leadingMargin" constant="77" id="La2-2s-z8e"/>
+                            <constraint firstItem="yvd-Tn-ztS" firstAttribute="leading" secondItem="WUj-Ak-acW" secondAttribute="leading" id="pol-aZ-rV5"/>
+                            <constraint firstItem="WUj-Ak-acW" firstAttribute="top" secondItem="yvd-Tn-ztS" secondAttribute="bottom" constant="27" id="scL-Bl-KZz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yvd-Tn-ztS" secondAttribute="trailing" constant="61" id="x4l-Cq-eIt"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="JKT-GR-oOB"/>
                 </viewController>
